--- a/memories.html
+++ b/memories.html
@@ -64,19 +64,19 @@
         <h2>Our Memories 🌹</h2>
         <div class="memory-grid">
             <div class="memory-item">
-                <img src="https://via.placeholder.com/200" alt="Memory 1">
+<!--<img src="https://via.placeholder.com/200" alt="Memory 1">-->
             </div>
             <div class="memory-item">
-                <img src="https://via.placeholder.com/200" alt="Memory 2">
+<!--<img src="https://via.placeholder.com/200" alt="Memory 2">-->
             </div>
             <div class="memory-item">
                 <video controls>
-                    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                    <!--<source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">-->
                     Your browser does not support the video tag.
                 </video>
             </div>
             <div class="memory-item">
-                <img src="https://via.placeholder.com/200" alt="Memory 3">
+        <!-- <img src="https://via.placeholder.com/200" alt="Memory 3"> remove when correct items are placed-->
             </div>
         </div>
     </div>
