--- a/memories.html
+++ b/memories.html
@@ -71,20 +71,75 @@
         <h2>Our Memories 🌹</h2>
         <div class="memory-grid">
             <div class="memory-item">
-                <img src="https://via.placeholder.com/200" alt="Memory 1">
+                <img src="IMG-20250203-WA0072.jpg" alt="Memory 1">
             </div>
             <div class="memory-item">
-                <img src="https://via.placeholder.com/200" alt="Memory 2">
+                <img src="IMG-20250203-WA0073.jpg" alt="Memory 1">
             </div>
             <div class="memory-item">
-                <!--<video controls>
-                    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>-->
+                <img src="IMG-20250203-WA0074.jpg" alt="Memory 1">
             </div>
             <div class="memory-item">
-                <img src="https://via.placeholder.com/200" alt="Memory 3">
+                <img src="IMG-20250203-WA0075.jpg" alt="Memory 1">
             </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0076.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0077.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0078.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0079.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0080.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0081.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0082.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0083.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0084.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0085.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0086.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0087.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0088.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0089.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0090.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0091.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0092.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0093.jpg" alt="Memory 1">
+            </div>
+            <div class="memory-item">
+                <img src="IMG-20250203-WA0094.jpg" alt="Memory 1">
+            </div>
+
         </div>
     </div>
 
